--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@swc/helpers": "~0.5.2",
+    "hls.js": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
